--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,8 +1,23 @@
-@use  "reset";
-@use  "variables";
+@use "reset";
+@use "variables";
 
 .app {
+    height: 100vh;
+    width: 100vw;
     background: var(--app-bg-color);
     color: var(--primary-color);
     font: var(--font-m);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper {
+    width: 1046px;
+    height: 100vh;
+    display: flex;
+}
+
+.content {
+    flex-grow: 1;
 }
