feat: added ui kit AppHeader, helper classNames

--- a/frontend/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/frontend/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,6 +1,6 @@
 .Sidebar {
     width: 200px;
-    border-right: 1px solid #181818;
+    border-right: 1px solid var(--border-color);
     padding: 8px;
 }
 
