--- a/frontend/src/app/styles/variables.scss
+++ b/frontend/src/app/styles/variables.scss
@@ -6,6 +6,9 @@
     --font-size-l: 24px;
     --font-line-l: 32px;
     --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+    
+    // colors
     --app-bg-color: #000;
     --primary-color: #fff;
+    --border-color: #181818;
 }
