--- a/frontend/src/shared/ui/AppButton/AppButton.module.scss
+++ b/frontend/src/shared/ui/AppButton/AppButton.module.scss
@@ -1,7 +1,7 @@
 .AppButton {
     cursor: pointer;
     color: var(--primary-color);
-    background: #c048f0;
+    background: var(--highlight-color);
     border: none;
     padding: 8px 16px;
     border-radius: 8px;
